# platzhalter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: .main.rs.rustfmt  color.rs  color_serde.rs  main.rs  service.rs
