[package]
name = "platzhalter"
version = "0.1.0"
authors = ["Ruben Smidt <ruben@rsmidt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
regex = "1"
once_cell = "1.17.0"
pretty_env_logger = "0.4"
log = "0.4"
cairo-rs = { version = "0.16.7", features = ["png"]}
png = "0.17.7"
futures = "0.3.26"
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0.38"
