[package]
name = "platzhalter"
version = "0.1.0"
authors = ["Ruben Smidt <ruben@rsmidt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-opentelemetry = { version = "0.13", features = ["metrics"] }
regex = "1"
once_cell = "1.17.0"
opentelemetry = { version = "0.18", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.10"
tracing = { version = "0.1" }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cairo-rs = { version = "0.17.0", features = ["png"] }
png = "0.17.7"
futures = "0.3.26"
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"
